# librttopo

./: .drone.yml  .editorconfig  .gitignore  .gitlab-ci.yml  CREDITS  ChangeLog  HOWTO_RELEASE  Makefile  Makefile.am  Makefile.in  NEWS.md  README.md  README.topo  TODO  aclocal.m4  box2d.c  bytebuffer.c  bytebuffer.h  configure.ac  effectivearea.c  effectivearea.h  g_box.c  g_serialized.c  g_serialized.txt  g_util.c  librtgeom.h.in  librtgeom_internal.h  librtgeom_topo.h  librtgeom_topo_internal.h  makefile.vc  measures.c  measures.h  measures3d.c  measures3d.h  ptarray.c  rtalgorithm.c  rtcircstring.c  rtcollection.c  rtcompound.c  rtcurvepoly.c  (+60 more)
doc/: BUILDING-ON-WINDOWS.md
headers/: librttopo.h  librttopo_geom.h.in
macros/: ac_proj4_version.m4
src/: Makefile.am  Makefile.in  box2d.c  bytebuffer.c  bytebuffer.h  g_box.c  g_serialized.c  g_util.c  librtgeom.h.in  librtgeom_internal.h  librttopo.h  librttopo_geom.h.in  librttopo_geom_internal.h  librttopo_internal.h  measures.c  measures.h  measures3d.c  measures3d.h  ptarray.c  rtalgorithm.c  rtcircstring.c  rtcollection.c  rtcompound.c  rtcurvepoly.c  rtgeodetic.c  rtgeodetic.h  rtgeodetic_tree.c  rtgeodetic_tree.h  rtgeom.c  rtgeom_api.c  rtgeom_debug.c  rtgeom_geos.c  rtgeom_geos.h  rtgeom_geos_clean.c  rtgeom_geos_node.c  rtgeom_geos_split.c  rtgeom_log.h  rtgeom_topo.c  rtgeom_tpsnap.c  rthomogenize.c  (+38 more)
